--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,16 @@
 services:
   px4:
-    build: ./PX4_sim/
+    build: .
     container_name: px4_sim
     network_mode: "service:tailscale"
     depends_on:
       - tailscale
-    volumes:
-      - ./html:/usr/share/nginx/html
     restart: unless-stopped
   tailscale:
     image: tailscale/tailscale:latest
     container_name: tailscale
     hostname: ${TS_HOSTNAME}
+    network_mode: "host"
     environment:
       - TS_AUTHKEY=${TS_AUTHKEY}
       - TS_STATE_DIR=/var/lib/tailscale
